# damaskpdt

./: .gitignore  CMakeLists.txt  README.md
matlab/: README.txt
matlab/characterize_flowcurve/: read_flowcurve_damaskpdt.m
matlab/characterize_ori_spread/: DAMASKPDT_CharODFTexture_02.m  DAMASKPDT_CharOriSpread_03.m  read_orispread_mtex.m
matlab/characterize_rho_spread/: DAMASKPDT_CharSpatDistr_02.m  QuantifyStateVarSpatialDistribution_04.m  kde2d.m  load_statevarspatdistr2.m  test_kde2d.m
matlab/characterize_usedforpaper/: DAMASKPDT_Benchmarking_01.m  DAMASKPDT_CharOriTexture_03.m  DAMASKPDT_ComputeModalOris_01.m  DAMASKPDT_CorrelateOriSpread_01.m  DAMASKPDT_CorrelateOriSpread_02.m  DAMASKPDT_CorrelateStressSpread_01.m  DAMASKPDT_CorrelateStressSpread_02.m  DAMASKPDT_GrainsParallelism_01.m  DAMASKPDT_LouvainGrainDetection_01.m  DAMASKPDT_ProcessParallelism_01.m  DAMASKPDT_TessellationComplexity_01.m  DAMASKPDT_VoxelizationParallelism_01.m  QuantifyStateVarSpatialDistribution_06.m  README.txt
matlab/visualize_and_debug/: DAMASKPDT_CharGrainVxlzation_01.m  DAMASKPDT_CharRVEDomainCellDistortion_02.m  aabb3d_plot.m  damaskpdt_plotaabb3d_01.m  mArrow3.m  plot_arrow.m  read_grainvxlgrids_csv.m  read_greppedbase1_01.m  read_greppedrveshape_01.m
slurm/: slurm.damaskpdt.make.sh  slurm.damaskpdt.run.talos.sh
src/: LOUVAIN_Core.cpp  LOUVAIN_Core.h  LOUVAIN_GraphBinary.cpp  LOUVAIN_GraphBinary.h  PDT_AABBTree.cpp  PDT_AABBTree.h  PDT_Abinitio.h  PDT_BoostSIMD.h  PDT_Crystallography.cpp  PDT_Crystallography.h  PDT_Datatypes.cpp  PDT_Datatypes.h  PDT_DatatypesMPI.cpp  PDT_DatatypesMPI.h  PDT_GrainBoundaryRecon.cpp  PDT_GrainBoundaryRecon.h  PDT_GrainGeomHdl.h  PDT_GrainHdl.cpp  PDT_GrainHdl.h  PDT_GrainObject.cpp  PDT_GrainObject.h  PDT_GrainPerImgRecon.cpp  PDT_GrainPerImgRecon.h  PDT_GrainSgnDistBasedQuant.h  PDT_GrainVoxelizer.cpp  PDT_GrainVoxelizer.h  PDT_HDF5.cpp  PDT_HDF5.h  PDT_IntelMKL.cpp  PDT_IntelMKL.h  PDT_Main.cpp  PDT_Math.cpp  PDT_Math.h  PDT_Numerics.h  PDT_OptionParser.cpp  PDT_OptionParser.h  PDT_OriMath.cpp  PDT_OriMath.h  PDT_Parallelization.h  PDT_Performance.cpp  (+20 more)
verification/: README.txt
